--- a/sobre.html
+++ b/sobre.html
@@ -33,14 +33,14 @@
 </header>
 
 <main id="main">
-	<div class="container">
+	<!--<div class="container">
 
 		<h3 class="title">Quem somos?</h3>
 		<p class="texto-main">Somos uma micro-empresa do ramo alimenticio <br> voltada para área de Salgados localizada na cidade de <br> Taquaritinga-SP interior de São Paulo</p>
 
 		<br><br>
 
-		<!-- <h3 class="title">Algumas das fotos da nossa empresa</h3> -->
+		<!- <h3 class="title">Algumas das fotos da nossa empresa</h3> 
 
 		<div class="containerRow">
 			<div class="row">
@@ -61,7 +61,7 @@
 			</span>
 		</div>
 
-		<!-- <div class="card" style="width: 18rem;">
+		<!- <div class="card" style="width: 18rem;">
 			<img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
 			<div class="card-body">
 			<h5 class="card-title">Título do card</h5>
@@ -87,17 +87,15 @@
 							<span class="spiner-cicle"></span>
 						</div>
 					</div>
-				</div> -->
-
+				</div> --
 		<br>
-
-   	</div>
+   	</div>-->
 
 	<div id="contProfile">
 		<div class="cardProfile" data-state="#about">
 			<div class="card-header">
 				<div class="card-cover" style="background-image: url('https://images.unsplash.com/photo-1549068106-b024baf5062d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80')"></div>
-				<img class="card-avatar" src="./img1.jpg" alt="avatar" />
+				<img class="card-avatar" src="./img/fznd/img2.jpg" alt="avatar" />
 				<h1 class="card-fullname">Fabiana Silva</h1>
 				<h2 class="card-jobtitle">Salgadeira</h2>
 		  	</div>
@@ -190,10 +188,10 @@
 				<h2 class="h2txtProfile">
 					MORAES SALGADOS
 				</h2> 
+				<p>
+					Ao lado tens um pouco da minha história, quem sou, o que eu faço, a quanto tempo faço, minhas experiências no ramo, e quando fundei a empresa
+				</p>
 			</div>
-			<p>
-				teste de lorem que nao esta funcionando e ta dando muita raiva mdsss
-			</p>
 		</div>
 	</div>
 </main>
