--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<button id="closeMenu">X</button>
 		<a href="./index.html">Inicio</a>
 		<a href="./sobre.html">Sobre</a>
-		<a href="#">Contato</a>
+		<a href="./contato.html">Contato</a>
       <a href="./login.html" class="loginBtn">Login</a>
 	</nav>
 </header>
@@ -291,6 +291,7 @@
 </footer>
 
 	<!--JAVASCRIPT-->
+   <script src="./JS/index.js"></script>
    <script src="./JS/drop.js"></script>
 	<script src="./JS/script.js"></script>
    <script src="./JS/responsive.js"></script>
