--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<!--CSS-->
+   <link rel="stylesheet" type="text/css" href="./CSS/PAGINAS/paginicial.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/style.css">
 	<link rel="stylesheet" type="text/css" href="./CSS/PAGINAS/index.css">
 
@@ -291,8 +292,8 @@
 </footer>
 
 	<!--JAVASCRIPT-->
-   <script src="./JS/index.js"></script>
    <script src="./JS/drop.js"></script>
+   <script src="./JS/index.js"></script>
 	<script src="./JS/script.js"></script>
    <script src="./JS/responsive.js"></script>
 
