--- a/login.html
+++ b/login.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login</title>
 
+    <!--CSS-->
     <link rel="stylesheet" type="text/css" href="./CSS/PAGINAS/login.css">
 
+    <title>Página de Login</title>
+    
 </head>
 
 <body>
