--- a/sobre.html
+++ b/sobre.html
@@ -33,64 +33,6 @@
 </header>
 
 <main id="main">
-	<!--<div class="container">
-
-		<h3 class="title">Quem somos?</h3>
-		<p class="texto-main">Somos uma micro-empresa do ramo alimenticio <br> voltada para área de Salgados localizada na cidade de <br> Taquaritinga-SP interior de São Paulo</p>
-
-		<br><br>
-
-		<!- <h3 class="title">Algumas das fotos da nossa empresa</h3> 
-
-		<div class="containerRow">
-			<div class="row">
-				<div class="col-sm">
-					<div class="image-cir">
-						<div class="imagem-circulo">
-							<img src="./img/fznd/img2.jpg" alt="ciculo">
-							<span class="spiner-cicle"></span>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<span class="txtContainerRow">
-				<h2>Nós somos uma empresa única!</h2>
-				<br>
-				<h3>Não ultilizamos mãos de obras de terceiros, desde o modo de preparo, até a venda e o consumo de nossos clientes, são feitos diretamente de nossa empresa. Só ultilizamos matérias primas tercerizados e especiarias.</h3>
-			</span>
-		</div>
-
-		<!- <div class="card" style="width: 18rem;">
-			<img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-			<div class="card-body">
-			<h5 class="card-title">Título do card</h5>
-			<p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer preencher o conteúdo do card.</p>
-			<a href="#" class="btn btn-primary">Visitar</a>
-			</div>
-		</div>
-		
-		<p class="image-main"><img src="#" alt="aqui entra uma imagem da dona da empresa"></p> -->
-
-		<!-- <div class="col-sm">
-					<div class="image-cir">
-						<div class="imagem-circulo">
-							<img src="./img/fznd/img2.jpg" alt="ciculo">
-							<span class="spiner-cicle"></span>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm">
-					<div class="image-cir">
-						<div class="imagem-circulo">
-							<img src="./img/fznd/img2.jpg" alt="ciculo">
-							<span class="spiner-cicle"></span>
-						</div>
-					</div>
-				</div> --
-		<br>
-   	</div>-->
-
 	<div id="contProfile">
 		<div class="cardProfile" data-state="#about">
 			<div class="card-header">
@@ -98,15 +40,15 @@
 				<img class="card-avatar" src="./img/fznd/img2.jpg" alt="avatar" />
 				<h1 class="card-fullname">Fabiana Silva</h1>
 				<h2 class="card-jobtitle">Salgadeira</h2>
-		  	</div>
+				</div>
 			<div class="card-main">
 				<div class="card-section is-active" id="about">
-			  		<div class="card-content">
+						<div class="card-content">
 						<div class="card-subtitle">Sobre mim</div>
 						<p class="card-desc">Tenho 36 anos, trabalho com salgados desde minha juventude, e depois de um tempo decidi sair e fundei a minha empresa
 						</p>
-			  		</div>
-			  	<div class="card-social">
+						</div>
+					<div class="card-social">
 					<a href="#"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path d="M15.997 3.985h2.191V.169C17.81.117 16.51 0 14.996 0c-3.159 0-5.323 1.987-5.323 5.639V9H6.187v4.266h3.486V24h4.274V13.267h3.345l.531-4.266h-3.877V6.062c.001-1.233.333-2.077 2.051-2.077z" /></svg>
 					</a>
@@ -121,34 +63,34 @@
 					<a href="#"><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 						<path d="M23.994 24v-.001H24v-8.802c0-4.306-.927-7.623-5.961-7.623-2.42 0-4.044 1.328-4.707 2.587h-.07V7.976H8.489v16.023h4.97v-7.934c0-2.089.396-4.109 2.983-4.109 2.549 0 2.587 2.384 2.587 4.243V24zM.396 7.977h4.976V24H.396zM2.882 0C1.291 0 0 1.291 0 2.882s1.291 2.909 2.882 2.909 2.882-1.318 2.882-2.909A2.884 2.884 0 002.882 0z" /></svg>
 					</a>
-			  	</div>
+					</div>
 			</div>
 			<div class="card-section" id="experience">
-			  	<div class="card-content">
+					<div class="card-content">
 					<div class="card-subtitle">WORK EXPERIENCE</div>
 						<div class="card-timeline">
-				  			<div class="card-item" data-year="2014">
+								<div class="card-item" data-year="2014">
 								<div class="card-item-title">Trabalhei na salgadaria <span>Da feira</span></div>
 								<div class="card-item-desc">Que ficava perto da minha casa</div>
-				  			</div>
+								</div>
 					<div class="card-item" data-year="2016">
 						<div class="card-item-title">UI Developer at <span>GitHub</span>
 						</div>
 						<div class="card-item-desc">Developed new conversion funnels and disrupt.
 						</div>
-				  	</div>
-				  	<div class="card-item" data-year="2018">
+						</div>
+						<div class="card-item" data-year="2018">
 						<div class="card-item-title">Illustrator at <span>Google</span>
 						</div>
 							<div class="card-item-desc">Onboarding illustrations for App.
 							</div>
-				  	</div>
-				  	<div class="card-item" data-year="2020">
+						</div>
+						<div class="card-item" data-year="2020">
 						<div class="card-item-title">Full-Stack Developer at <span>CodePen</span>
 						</div>
 							<div class="card-item-desc">Responsible for the encomposing brand expreience.
 							</div>
-				  	</div>
+						</div>
 				</div>
 			</div>
 		</div>
@@ -161,7 +103,7 @@
 								<path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0118 0z" />
 								<circle cx="12" cy="10" r="3" /></svg>
 								Algonquin Rd, Three Oaks Vintage, MI, 49128
-				  			</div>
+								</div>
 							<div class="card-contact">
 								<svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 								<path d="M22 16.92v3a2 2 0 01-2.18 2 19.79 19.79 0 01-8.63-3.07 19.5 19.5 0 01-6-6 19.79 19.79 0 01-3.07-8.67A2 2 0 014.11 2h3a2 2 0 012 1.72 12.84 12.84 0 00.7 2.81 2 2 0 01-.45 2.11L8.09 9.91a16 16 0 006 6l1.27-1.27a2 2 0 012.11-.45 12.84 12.84 0 002.81.7A2 2 0 0122 16.92z" /></svg>(269) 756-9809
@@ -172,9 +114,9 @@
 								<path d="M22 6l-10 7L2 6" /></svg>
 								william@rocheald.com
 							</div>
-				  				<button class="contact-me">WORK TOGETHER</button>
+									<button class="contact-me">WORK TOGETHER</button>
 						</div>
-			  	</div>
+					</div>
 			</div>
 				<div class="card-buttons">
 					<button data-section="#about" class="is-active">SOBRE</button>
@@ -188,11 +130,20 @@
 				<h2 class="h2txtProfile">
 					MORAES SALGADOS
 				</h2> 
+				<hr><br>
 				<p>
 					Ao lado tens um pouco da minha história, quem sou, o que eu faço, a quanto tempo faço, minhas experiências no ramo, e quando fundei a empresa
 				</p>
 			</div>
 		</div>
+
+		<br><br>
+
+		<!-- <div id="containerSeg">
+			<div class="menuCont">
+				<h1>Teste de profille</h1>
+			</div>
+		</div> -->
 	</div>
 </main>
 
